--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<version>1.16.10</version>
 		</dependency>
 
+		<!-- commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
