--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 # mysql
-spring.datasource.url=jdbc:mysql://212.64.84.172:3306/pinliang_test?autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-spring.datasource.username=plceshi
-spring.datasource.password=Plceshi2018
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # show sql in console
 logging.level.com.wangzaiplus.test.mapper=debug
