--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<version>3.4</version>
 		</dependency>
 
+		<!-- springboot-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
