--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # show sql in console
 logging.level.com.wangzaiplus.test.mapper=debug
+
+# rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
