rabbitmq log user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+# user log (rabbitmq)
+log.user.queue.name=log.user.queue
+log.user.exchange.name=log.user.exchange
+log.user.routing.key.name=log.user.routing.key
