test msg confirms and return callback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 # mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,6 +23,14 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+# 开启confirms回调 P -> Exchange
+spring.rabbitmq.publisher-confirms=true
+# 开启returnedMessage回调 Exchange -> Queue
+spring.rabbitmq.publisher-returns=true
+# 触发returnedMessage回调必须设置mandatory=true, 否则Exchange没有找到Queue就会丢弃掉消息, 而不会触发回调
+spring.rabbitmq.template.mandatory=true
+# 设置手动确认(ack) Queue -> C
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
 # user log (rabbitmq)
 log.user.queue.name=log.user.queue
