--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,4 @@ spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
 # 设置手动确认(ack) Queue -> C
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
-
-# user log (rabbitmq)
-log.user.queue.name=log.user.queue
-log.user.exchange.name=log.user.exchange
-log.user.routing.key.name=log.user.routing.key
+spring.rabbitmq.listener.simple.prefetch=100
