--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,12 @@ spring.rabbitmq.template.mandatory=true
 # 设置手动确认(ack) Queue -> C
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.prefetch=100
+
+# mail
+spring.mail.host=smtp.163.com
+spring.mail.username=18621142249@163.com
+spring.mail.password=123456wangzai
+spring.mail.from=18621142249@163.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
