--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,13 @@
 			<resource>
 				<directory>src/main/java</directory>
 				<includes>
-					<include>**/*.xml</include>
+					<include>**/*.*</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.*</include>
 				</includes>
 			</resource>
 		</resources>
