--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,16 +1,18 @@
-server.port=11111
+server.port=8080
+spring.resources.static-locations=classpath:/templates/,classpath:/static/
+spring.mvc.view.suffix=.html
 
 # redis
-spring.redis.host=172.81.225.73
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=PL298CS2
+spring.redis.password=beigua
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 # mysql
-spring.datasource.url=jdbc:mysql://192.168.1.88:3306/test?serverTimezone=GMT%2B8&autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&autoR&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,7 +21,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.com.wangzaiplus.test.mapper=debug
 
 # rabbitmq
-spring.rabbitmq.host=192.168.1.88
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
@@ -33,9 +35,9 @@ spring.rabbitmq.listener.simple.prefetch=100
 
 # mail
 spring.mail.host=smtp.163.com
-spring.mail.username=18621142249@163.com
-spring.mail.password=123456wangzai
-spring.mail.from=18621142249@163.com
+spring.mail.username=18888888888@163.com
+spring.mail.password=beigua
+spring.mail.from=18888888888@163.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
