--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,8 +5,8 @@ spring.mvc.view.suffix=.html
 # redis
 spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=beigua
-spring.redis.jedis.pool.max-idle=8
+spring.redis.password=root
+spring.redis.jedis.pool.max-idle=32
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
