get rank from redis

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,14 @@
 			<artifactId>okhttp</artifactId>
 			<version>3.10.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>3.0.0</version>
+			<type>pom</type>
+		</dependency>
+
 	</dependencies>
 
 	<build>
