--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -36,12 +36,13 @@ spring.rabbitmq.listener.simple.prefetch=100
 
 # mail
 spring.mail.host=smtp.163.com
-spring.mail.username=18888888888@163.com
-spring.mail.password=beigua
-spring.mail.from=18888888888@163.com
+spring.mail.username=18621142249@163.com
+spring.mail.password=123456wangzai
+spring.mail.from=18621142249@163.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 
 ok.http.connect-timeout=30
 ok.http.read-timeout=30
