--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,11 +26,11 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-# ¿ªÆôconfirms»Øµ÷ P -> Exchange
+# ï¿½ï¿½ï¿½ï¿½confirmsï¿½Øµï¿½ P -> Exchange
 spring.rabbitmq.publisher-confirms=true
-# ¿ªÆôreturnedMessage»Øµ÷ Exchange -> Queue
+# ï¿½ï¿½ï¿½ï¿½returnedMessageï¿½Øµï¿½ Exchange -> Queue
 spring.rabbitmq.publisher-returns=true
-# ÉèÖÃÊÖ¶¯È·ÈÏ(ack) Queue -> C
+# ï¿½ï¿½ï¿½ï¿½ï¿½Ö¶ï¿½È·ï¿½ï¿½(ack) Queue -> C
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.prefetch=100
 
@@ -47,7 +47,7 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 ok.http.connect-timeout=30
 ok.http.read-timeout=30
 ok.http.write-timeout=30
-# Á¬½Ó³ØÖÐÕûÌåµÄ¿ÕÏÐÁ¬½ÓµÄ×î´óÊýÁ¿
+# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Óµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 ok.http.max-idle-connections=200
-# Á¬½Ó¿ÕÏÐÊ±¼ä×î¶àÎª 300 Ãë
+# ï¿½ï¿½ï¿½Ó¿ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½Îª 300 ï¿½ï¿½
 ok.http.keep-alive-duration=300
