--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<jedis.version>2.9.0</jedis.version>
+		<sonar.host.url>http://10.10.2.109:9000</sonar.host.url>
+		
 	</properties>
 
 	<dependencies>
